

Version 1.6.current:
    This is the active development branch. All changes get done here and
    critical stuff gets committed with -m "... (backport to 1.5)" and then
    backported to 1.5. :) Commits to 1.5 done in any other way are likely to
    get reverted.

  Developer notes (these should be moved to the end in the release):
    * the testing wikiconfig moved to tests/wikiconfig.py, the testing wiki
      is now created in tests/wiki/...
    * killed "processors" (finally), formatter method changed to:
      formatter.parser(parsername, lines)
    * refactored some actions to use ActionBase base class
    * moved "test" action from wikiaction to MoinMoin/action/
      (and use ActionBase)
    * moved MoinMoin/config.py to MoinMoin/config/__init__.py
    * moved MoinMoin/multiconfig.py to MoinMoin/config/multiconfig.py
    * moved "SystemInfo" macro from wikimacro to MoinMoin/macro/
    * moved wikiaction.py stuff to MoinMoin/action/__init__.py
    * moved wikimacro.py stuff to MoinMoin/macro/__init__.py
    * moved wikirpc.py stuff to MoinMoin/xmlrpc/__init__.py
    * moved wikitest.py stuff to action/test.py (only used from there)
    * moved formatter/base.py to formatter/__init__.py (FormatterBase)
    * moved util/ParserBase.py to parser/ParserBase.py
    * moved / splitted request.py into MoinMoin/request/*
      Most stuff will be broken, please help fixing it (usually some imports
      will be missing and the adaptor script will need a change maybe):
      CGI works
      CLI works
      STANDALONE works
      FCGI works
      TWISTED works
      MODPY ?
      WSGI ?
    * moved util/antispam.py to security/antispam.py,
      moved util/autoadmin.py to security/autoadmin.py,
      moved security.py to security/__init__.py,
      moved wikiacl.py to security/__init__.py.
    * moved logfile/logfile.py to logfile/__init__.py
    * moved mailimport.py to mail/mailimport.py,
      moved util/mail.py to mail/sendmail.py